--- a/online-help-96-97/task_updating_cluster_nondisruptively.adoc
+++ b/online-help-96-97/task_updating_cluster_nondisruptively.adoc
@@ -17,7 +17,7 @@ You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to
 * All of the nodes must be healthy.
 * You must have copied the software image from the NetApp Support Site to an HTTP server or FTP server on your network so that the nodes can access the image.
 +
-link:task_obtaining_ontap_software_images.md#[Obtaining ONTAP software images]
+link:task_obtaining_ontap_software_images.html[Obtaining ONTAP software images]
 
 .About this task
 
