--- a/networking/set_up_nas_path_failover_9_to_97_cli.adoc
+++ b/networking/set_up_nas_path_failover_9_to_97_cli.adoc
@@ -21,7 +21,7 @@ This workflow guides you through the networking configuration steps to set up NA
 
 If you are running an ONTAP release later than 9.7, you should use the NAS path failover procedure for ONTAP 9.8 or later:
 
-* link:https://docs.netapp.com/us-en/ontap/networking/set_up_nas_path_failover_98_and_later_cli.html[ONTAP 9.8 and later NAS path failover workflow]
+* link:https://docs.netapp.com/us-en/ontap/networking/set_up_nas_path_failover_98_and_later_cli.html[ONTAP 9.8 and later NAS path failover workflow^]
 
 If you want details about network components and management, you should use the network management reference material:
 
