--- a/networking/workflow__nas_path_failover_overview_manual.adoc
+++ b/networking/workflow__nas_path_failover_overview_manual.adoc
@@ -5,7 +5,7 @@ keywords: introducing, introduction, overview, workflow, nas path, failover, fai
 summary: NAS path failover configuration for ONTAP 9.0 - 9.7
 ---
 
-= Workflow (ONTAP 9.7 and earlier)
+= NAS path failover workflow (ONTAP 9.7 and earlier)
 :hardbreaks:
 :nofooter:
 :icons: font
