--- a/networking-failover/workflow__nas_path_failover_overview_manual.adoc
+++ b/networking-failover/workflow__nas_path_failover_overview_manual.adoc
@@ -27,27 +27,27 @@ A SAN LIF does not migrate (unless you move it manually after the link failure).
 [role="quick-margin-para"]
 Use the worksheet to plan NAS path failover.
 
-.image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-2.png[Two]link:create_ipspaces.html[Create IPspaces]
+.image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-2.png[Two]link:../networking/create_ipspaces.html[Create IPspaces]
 [role="quick-margin-para"]
 Create a distinct IP address space for each SVM in a cluster.
 
-.image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-3.png[Three]link:create_a_broadcast_domain97.html[Create broadcast domains]
+.image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-3.png[Three]link:../networking-bd/create_a_broadcast_domain97.html[Create broadcast domains]
 [role="quick-margin-para"]
 Create broadcast domains.
 
-.image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-4.png[Four]link:create_a_subnet.html[Create subnets]
+.image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-4.png[Four]link:../networking/create_a_subnet.html[Create subnets]
 [role="quick-margin-para"]
 Create subnets.
 
-.image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-5.png[Five]link:create_svms.html[Create SVMs]
+.image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-5.png[Five]link:../networking/create_svms.html[Create SVMs]
 [role="quick-margin-para"]
 Create SVMs to serve data to clients.
 
-.image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-6.png[Six]link:create_a_lif.html[Create LIFs]
+.image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-6.png[Six]link:../networking/create_a_lif.html[Create LIFs]
 [role="quick-margin-para"]
 Create LIFs on the ports you want to use to access data.
 
-.image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-7.png[Seven]link:configure_dns_services_manual.html[Configure DNS services for the SVM]
+.image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-7.png[Seven]link:../networking/configure_dns_services_manual.html[Configure DNS services for the SVM]
 [role="quick-margin-para"]
 configure DNS services for the SVM before creating an NFS or SMB server.
 
