content quality fixes

--- a/online-help-96-97/concept_aggregates.adoc
+++ b/online-help-96-97/concept_aggregates.adoc
@@ -5,6 +5,11 @@ keywords: aggregates, system, manager, security, backup, performance, data, shar
 summary: "You can use System Manager to create aggregates to support the differing security, backup, performance, and data sharing requirements of your users."
 ---
 = Manage aggregates with System Manager - ONTAP 9.7 and earlier
+:hardbreaks:
+:nofooter:
+:icons: font
+:linkattrs:
+:imagesdir: ../media/
 
 You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create aggregates to support the differing security, backup, performance, and data sharing requirements of your users.
 
