--- a/networking/create_a_lif.adoc
+++ b/networking/create_a_lif.adoc
@@ -63,7 +63,7 @@ iSCSI LIF failover is automatically enabled (the failover policy is set to `sfo-
 +
 If after you upgrade to ONTAP 9.11.1 or later, you have existing iSCSI LIFs in an SVM that have not been enabled with the iSCSI LIF failover feature and you create new iSCSI LIFs in the same SVM, the new iSCSI LIFs assume the same failover policy (`disabled`) of the existing iSCSI LIFs in the SVM.
 +
-link:../san-admin/asa-iscsi-lif-fo-task.html[iSCSI LIF failover for ASA platforms]
+link:https://docs.netapp.com/us-en/ontap/san-admin/asa-iscsi-lif-fo-task.html[iSCSI LIF failover for ASA platforms^]
 
 Beginning with ONTAP 9.7, ONTAP automatically chooses the home port of a LIF, as long as at least one LIF already exists in the same subnet in that IPspace. ONTAP chooses a home-port in the same broadcast domain as other LIFs in that subnet. You can still specify a home port, but it is no longer required (unless no LIFs yet exist in that subnet in the specified IPspace).
 
