--- a/online-help-96-97/concept_nodes.adoc
+++ b/online-help-96-97/concept_nodes.adoc
@@ -10,6 +10,11 @@ summary: "You can use System Manager to view the details of the nodes in the clu
 You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to view the details of the nodes in the cluster.
 
 == Initialize the ComplianceClock time
+:hardbreaks:
+:nofooter:
+:icons: font
+:linkattrs:
+:imagesdir: ../media/
 
 You can use System Manager to initialize the ComplianceClock time to the current cluster time. You must initialize the ComplianceClock time in order to create SnapLock aggregates.
 
