--- a/online-help-96-97/concept_shares.adoc
+++ b/online-help-96-97/concept_shares.adoc
@@ -9,6 +9,11 @@ summary: "You can use System Manager to create, edit, and manage shares."
 You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create, edit, and manage shares.
 
 == Create a CIFS share
+:hardbreaks:
+:nofooter:
+:icons: font
+:linkattrs:
+:imagesdir: ../media/
 
 You can use System Manager to create a CIFS share that enables you to specify the folder, qtree, or volume that CIFS users can access.
 
