--- a/online-help-96-97/task_resizing_flexcache_volumes.adoc
+++ b/online-help-96-97/task_resizing_flexcache_volumes.adoc
@@ -27,7 +27,7 @@ By default, existing aggregates are used to resize the FlexCache volume. Beginni
 +
 [NOTE]
 ====
-If you want to expand the FlexCache volume by adding new resources, click image:../media/advanced_options.gif[] (advanced options). Refer to link:https://docs.netapp.com/us-en/ontap-sm-classic/online-help-96-97/task_specifying_advanced_options_for_flexcache_volume.html[Specifying advanced options for FlexCache volumes].
+If you want to expand the FlexCache volume by adding new resources, click image:../media/advanced_options.gif[advanced options icon] (advanced options). Refer to link:https://docs.netapp.com/us-en/ontap-sm-classic/online-help-96-97/task_specifying_advanced_options_for_flexcache_volume.html[Specifying advanced options for FlexCache volumes].
 ====
 
 . Click *Save* to resize the FlexCache volume.
