--- a/online-help-96-97/concept_updating_clusters_non_metrocluster_configuration.adoc
+++ b/online-help-96-97/concept_updating_clusters_non_metrocluster_configuration.adoc
@@ -11,7 +11,7 @@ summary: "You can use System Manager to update a cluster or the individual nodes
 [.lead]
 You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to update a cluster or the individual nodes in a high-availability (HA) pair. To perform an update, you should select an ONTAP image, validate that your cluster or the individual nodes in the HA pair are ready for the update, and then perform the update.
 
-image::../media/updating_cluster.gif[]
+image::../media/updating_cluster.gif[update clusters in a non metrocluster configuration with system manager]
 
 *Related information*
 
