--- a/online-help-96-97/task_editing_flexgroup_volumes.adoc
+++ b/online-help-96-97/task_editing_flexgroup_volumes.adoc
@@ -37,14 +37,14 @@ Beginning with System Manager 9.6, you can also rename FlexGroup DP volumes.
 This option is available only if you have enabled the Volume Encryption license and if the corresponding platform supports encryption.
 
 . Specify the percentage of the Snapshot copy reserve.
-. *Optional:* Click image:../media/advanced_options.gif[] to modify the FlexGroup volume settings. Refer to link:task_specifying_advanced_options_for_flexgroup_volume.html[Specifying advanced options for a FlexGroup volume].
+. *Optional:* Click image:../media/advanced_options.gif[advanced options icon] to modify the FlexGroup volume settings. Refer to link:task_specifying_advanced_options_for_flexgroup_volume.html[Specifying advanced options for a FlexGroup volume].
 . Specify the size to which you want to resize the FlexGroup volume.
 +
 By default, existing aggregates are used to resize the FlexGroup volume. The minimum size that is allowed for the volume is displayed next to the size fields.
 +
 [NOTE]
 ====
-If you want to expand the FlexGroup volume by adding new resources, click image:../media/advanced_options.gif[] (advanced options). Refer to link:task_specifying_advanced_options_for_flexgroup_volume.html[Specifying advanced options for a FlexGroup volume].
+If you want to expand the FlexGroup volume by adding new resources, click image:../media/advanced_options.gif[advanced options icon] (advanced options). Refer to link:task_specifying_advanced_options_for_flexgroup_volume.html[Specifying advanced options for a FlexGroup volume].
 ====
 
 . Click *Save* to save the changes.
