--- a/volume-backup-snapvault/task_monitoring_snapvault_relationship.adoc
+++ b/volume-backup-snapvault/task_monitoring_snapvault_relationship.adoc
@@ -37,4 +37,4 @@ You should troubleshoot any issues in the SnapVault relationships. The troublesh
 +
 http://www.netapp.com/us/media/tr-4015.pdf[NetApp Technical Report 4015: SnapMirror Configuration and Best Practices for ONTAP 9.1, 9.2^]
 +
-image::../media/monitor_sv.gif[]
+image::../media/monitor_sv.gif[snapvault relationship status]
