--- a/volume-disaster-recovery/task_verifying_source_volume_status.adoc
+++ b/volume-disaster-recovery/task_verifying_source_volume_status.adoc
@@ -22,7 +22,7 @@ You must perform this task from the *source* cluster.
 . Identify the destination volume in the SnapMirror relationship.
  ** Beginning with ONTAP 9.3: Double-click the source volume to view the details, and then click *PROTECTION* to identify the destination volume in the SnapMirror relationship and the name of the SVM that contains the volume.
 +
-image::../media/snapmirror_destination_93.gif[]
+image::../media/snapmirror_destination_93.gif[image of protection tab showing the destination volume in the snapmirror relationship]
 
  ** ONTAP 9.2 or earlier: Click the *Data Protection* tab at the bottom of the Volumes page to identify the destination volume in the SnapMirror relationship and the name of the SVM that contains the volume.
 +
